# test-task-es

./: Dockerfile  README.md  app.py  config.py  fill.py  pyproject.toml  requirements.txt
search_test_task/: __init__.py  models.py  routes.py  schema.py
search_test_task/templates/: index.html
tests/: conftest.py  test_search.py
