[tool.poetry]
name = "search-test-task"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "search_test_task"}]

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.6.2"
flask = "^2.2.3"
certifi = "^2022.12.7"
flask-sqlalchemy = "^3.0.3"
flask-apispec = "^0.11.4"
pytest = "^7.2.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
